# zuspec-be-fv

./: .envrc  .gitignore  README.md  ivpm.yaml  pyproject.toml
src/zuspec/be/fv/: __init__.py  checker.py
src/zuspec/be/fv/analysis/: __init__.py  bounds_analyzer.py
src/zuspec/be/fv/passes/: __init__.py  abstraction_formal.py  counter_formal.py
src/zuspec/be/fv/pipeline/: __init__.py  expr_to_smt2.py  pipeline_to_smt2.py  smt2_helpers.py
src/zuspec/be/fv/rtl/: __init__.py  expr_translator.py  expr_translator.py.old  rtl_to_smt2.py  smt2_module.py  stmt_translator.py  translation_context.py
src/zuspec/be/fv/smt2/: __init__.py  bitvec_ops.py  rand_emitter.py
src/zuspec/be/fv/solver/: __init__.py  base.py  result.py  z3_solver.py
src/zuspec/be/fv/translator/: __init__.py  dm_to_smt.py  type_translator.py
src/zuspec/be/fv/verification/: __init__.py  bmc_smt2.py  cover_smt2.py  cover_verifier.py  k_induction_smt2.py  solver_runner.py  trace.py  verifier.py
tests/: test_abstraction_formal.py
tests/unit/: conftest.py  test_bounds_analyzer.py  test_checker.py  test_comb_translation_phase5.py  test_contract_checking.py  test_counter_formal.py  test_dm_to_smt.py  test_expr_to_smt2.py  test_expr_translation_phase3.py  test_ir_pipeline_formal.py  test_property_extraction_phase6.py  test_rtl_to_smt2.py  test_setup.py  test_stmt_translation_phase4.py  test_sync_formal_evaluation.py  test_sync_formal_props.py  test_sync_process_translation_phase4.py  test_type_translator.py  test_z3_solver.py
