[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zuspec-be-fv"
version = "0.1.0"
description = "Formal verification backend for Zuspec dataclasses"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zuspec Contributors"}
]
dependencies = [
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
